--- a/reset.css
+++ b/reset.css
@@ -22,10 +22,26 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+/*  */
 body {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: white;
+
     background-color: black;
 	line-height: 1;
 }
+h1{
+	font-size: 2rem;
+	font-family: "poppins", sans-serif;
+}
+h4{
+	font-size: 1.2rem;
+	font-family: monospace, 'Courier New', Courier;
+}
+/*  */
 ol, ul {
 	list-style: none;
 }
