--- a/spark pixel/spark-pixel.css
+++ b/spark pixel/spark-pixel.css
@@ -4,6 +4,7 @@
   border: 1px solid rgb(255 255 255 / 5%);
   border-radius: 1.5rem;
   padding: 2rem;
+  margin: 20px;
 }
 .card:after {
   content: "";
