--- a/blurred bubble/background-bubble.css
+++ b/blurred bubble/background-bubble.css
@@ -7,7 +7,7 @@
     backdrop-filter: blur(200px);
 }
 #bubble{
-    height: 300px;
+    height: max(20vw, 120px);
     left: 50%;
     top: 20%;
     translate: -50% -50%;
@@ -25,6 +25,7 @@
     );
     animation: rotation 20s infinite; 
 }
+
 @keyframes rotation{
     from{
         transform: rotate(0deg);
