--- a/spark pixel/spark-pixel.css
+++ b/spark pixel/spark-pixel.css
@@ -1,10 +1,12 @@
 .card {
   position: relative;
-  background-color: rgba(16, 16, 16, 0.2);
-  border: 1px solid rgb(255 255 255 / 5%);
-  border-radius: 1.5rem;
   padding: 2rem;
   margin: 20px;
+  
+  border: 1px solid rgb(255 255 255 / 5%);
+  border-radius: 1.5rem;
+  background-color: rgba(16, 16, 16, 0.2);
+  cursor: pointer;
 }
 .card:after {
   content: "";
@@ -30,7 +32,7 @@
   top: 25%;
   opacity: 1;
 }
-.card-content {  
+.card-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
